[package]
name = "rewryte-cli"
version = "0.1.1"
authors = ["Txuritan <txuritan@protonmail.com>"]
edition = "2018"

description = "A tool to transform and generate code based off SQL schema"
repository = "https://gitlab.com/Txuritan/rewryte"

readme = "../README.md"
license = "MIT OR Apache-2.0"

keywords = ["database", "schema", "codegen"]

workspace = ".."

[dependencies]
rewryte-generator = { path = "../rewryte-generator", version = "0.1" }
rewryte-parser = { path = "../rewryte-parser", version = "0.1" }

anyhow = "1.0"
clap = "2.33"
codespan-reporting = "0.9"
