[package]
name = "rewryte-generator"
version = "0.1.0"
authors = ["Txuritan <txuritan@protonmail.com>"]
edition = "2018"

description = "The codegenerator for rewryte and rewryte-cli"
repository = "https://gitlab.com/Txuritan/rewryte"

readme = "../README.md"
license = "MIT OR Apache-2.0"

keywords = ["database", "schema", "codegen", "cli"]

workspace = ".."

[features]
postgres = [ ]
serde = [ ]
sqlite = [ "heck" ]

[dependencies]
rewryte-parser = { path = "../rewryte-parser", version = "0.1" }

codegen = "0.1"
heck = { version = "0.3", optional = true }
thiserror = "1.0.20"
