[package]
name = "rewryte-generator"
version = "0.1.2"
authors = ["Txuritan <txuritan@protonmail.com>"]
edition = "2018"

description = "The codegenerator for rewryte and rewryte-cli"
repository = "https://gitlab.com/Txuritan/rewryte"

readme = "../README.md"
license = "MIT OR Apache-2.0"

keywords = ["database", "schema", "codegen", "cli"]

workspace = ".."

[features]
default = [ ]

postgres = [ ]
sqlite = [ ]

[dependencies]
rewryte-parser = { path = "../rewryte-parser", version = "0.1" }

heck = "0.3"
proc-macro2 = "1.0"
quote = "1.0"
thiserror = "1.0.20"
