[package]
name = "rewryte-macro"
version = "0.1.0"
authors = ["Txuritan <txuritan@protonmail.com>"]
edition = "2018"

description = "The proc-macros for rewryte"
repository = "https://gitlab.com/Txuritan/rewryte"

readme = "../README.md"
license = "MIT OR Apache-2.0"

keywords = ["database", "schema", "codegen", "proc-macro"]

workspace = ".."

[lib]
proc-macro = true

[dependencies]
rewryte-generator = { path = "../rewryte-generator", version = "0.1" }
rewryte-parser = { path = "../rewryte-parser", version = "0.1" }

codespan-reporting = "0.9"
quote = "1.0"
syn = "1.0"
