[package]
name = "rewryte"
version = "0.1.0"
authors = ["Txuritan <txuritan@protonmail.com>"]
edition = "2018"

description = "A library to transform and generate code based off SQL schema"
repository = "https://gitlab.com/Txuritan/rewryte"

readme = "../README.md"
license = "MIT OR Apache-2.0"

keywords = ["database", "schema", "codegen"]

workspace = ".."

[features]
postgres = [ "rewryte-generator/postgres" ]
serde = [ "rewryte-generator/serde" ]
sqlite = [ "rusqlite", "rewryte-generator/sqlite" ]

[dependencies]
rewryte-generator = { path = "../rewryte-generator", version = "0.1" }
rewryte-macro = { path = "../rewryte-macro", version = "0.1" }
rewryte-parser = { path = "../rewryte-parser", version = "0.1" }

anyhow = "1.0"
rusqlite = { version = "0.24", default-features = false, optional = true }
