[package]
name = "rewryte"
version = "0.1.2"
authors = ["Txuritan <txuritan@protonmail.com>"]
edition = "2018"

description = "A library to transform and generate code based off SQL schema"
repository = "https://gitlab.com/Txuritan/rewryte"

readme = "../README.md"
license = "MIT OR Apache-2.0"

keywords = ["database", "schema", "codegen"]

workspace = ".."

[features]
default = [ "postgres", "sqlite" ]

postgres = [ "tokio-postgres", "async-trait", "futures", "pin-project-lite", "rewryte-generator/postgres" ]
sqlite = [ "rusqlite", "rewryte-generator/sqlite" ]

feature-gate-juniper = [ "rewryte-generator/feature-gate-juniper" ]
feature-gate-serde = [ "rewryte-generator/feature-gate-serde" ]

[dependencies]
rewryte-generator = { path = "../rewryte-generator", version = "0.1" }
rewryte-macro = { path = "../rewryte-macro", version = "0.1" }
rewryte-parser = { path = "../rewryte-parser", version = "0.1" }

anyhow = "1.0"

async-trait = { version = "0.1", optional = true }
futures = { version = "0.3", optional = true }
pin-project-lite = { version = "0.1", optional = true }
tokio-postgres = { version = "0.5", default-features = false, optional = true }

rusqlite = { version = "0.24", default-features = false, optional = true }
