[package]
name = "rewryte"
version = "0.1.3"
authors = ["Txuritan <txuritan@protonmail.com>"]
edition = "2018"

description = "A library to transform and generate code based off SQL schema"
repository = "https://gitlab.com/Txuritan/rewryte"

readme = "../README.md"
license = "MIT OR Apache-2.0"

keywords = [ "database", "schema", "codegen" ]

workspace = ".."

[features]
default = [ "postgres", "sqlite" ]

postgres = [ "tokio-postgres", "async-trait", "futures", "pin-project-lite", "rewryte-generator/postgres" ]
sqlite = [ "rusqlite", "rewryte-generator/sqlite" ]

build-script = [ "codespan-reporting" ]

feature-gate-juniper = [ "rewryte-generator/feature-gate-juniper" ]
feature-gate-serde = [ "rewryte-generator/feature-gate-serde" ]
feature-gate-sqlx = [ "rewryte-generator/feature-gate-sqlx" ]

with-chrono = [ "chrono", "rusqlite/chrono", "tokio-postgres/with-chrono-0_4" ]
with-serde-json = [ "uuid", "rusqlite/serde_json", "tokio-postgres/with-serde_json-1" ]
with-uuid = [ "uuid", "rusqlite/uuid", "tokio-postgres/with-uuid-0_8" ]

[dependencies]
rewryte-generator = { path = "../rewryte-generator", version = "0.1" }
rewryte-macro = { path = "../rewryte-macro", version = "0.1" }
rewryte-parser = { path = "../rewryte-parser", version = "0.1" }

anyhow = "1.0"
codespan-reporting = { version = "0.9", optional = true }

async-trait = { version = "0.1", optional = true }
futures = { version = "0.3", optional = true }
pin-project-lite = { version = "0.1", optional = true }
tokio-postgres = { version = "0.5", default-features = false, optional = true }

rusqlite = { version = "0.24", default-features = false, optional = true }

chrono = { version = "0.4", default-features = false, optional = true }
serde_json = { version = "1.0", optional = true }
uuid = { version = "0.8", optional = true }
